src/nodes/snapshots/flux__nodes__levels__tests__identity_is_passthrough.snap
---
source: src/nodes/levels.rs
expression: stats
---
32x32
mean  R=193.0 G=193.0 B=193.0 A=255.0
range R=193-193 G=193-193 B=193-193 A=255-255
nonblack 1024/1024
